--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button" class="button primary">Заказать услугу</button>
+        <button data-model-open type="button" class="button primary">
+          Заказать услугу
+        </button>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <p>Lorem</p>
+            <button data-modal-close>Закрыть</button>
+          </div>
+        </div>
       </section>
       <!--necessary skills-->
       <section class="section">
@@ -550,5 +558,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
