--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,16 @@
                         <h3 class="list-title-portfolio">Технокряк</h3>
                         <p class="portfolio-about">Веб-сайт</p>
                       </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
+                      </div>
                     </div>
                   </a>
                 </article>
