--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button data-model-open type="button" class="button primary">
+        <button data-modal-open type="button" class="button primary">
           Заказать услугу
         </button>
         <div class="backdrop is-hidden" data-modal>
@@ -145,6 +145,9 @@
                 alt="Иллюстрация верстки"
                 width="370"
               />
+              <div class="employments-about">
+                <p class="employments-about-text">Десктопные приложения</p>
+              </div>
             </li>
             <li class="employments-item">
               <img
@@ -152,6 +155,9 @@
                 alt="Иллюстрация мобильного приложения"
                 width="370"
               />
+              <div class="employments-about">
+                <p class="employments-about-text">Мобильные приложения</p>
+              </div>
             </li>
             <li class="employments-item">
               <img
@@ -159,6 +165,9 @@
                 alt="Иллюстрация применения стилей"
                 width="370"
               />
+              <div class="employments-about">
+                <p class="employments-about-text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -558,6 +567,6 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
