hover all portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -121,6 +121,16 @@
                         </h3>
                         <p class="portfolio-about">Дизайн</p>
                       </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
+                      </div>
                     </div>
                   </a>
                 </article>
@@ -137,6 +147,16 @@
                       <div class="box">
                         <h3 class="list-title-portfolio">Ресторан Seafood</h3>
                         <p class="portfolio-about">Приложение</p>
+                      </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
                       </div>
                     </div>
                   </a>
@@ -155,6 +175,16 @@
                         <h3 class="list-title-portfolio">Проект Prime</h3>
                         <p class="portfolio-about">Маркетинг</p>
                       </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
+                      </div>
                     </div>
                   </a>
                 </article>
@@ -171,6 +201,16 @@
                       <div class="box">
                         <h3 class="list-title-portfolio">Проект Boxes</h3>
                         <p class="portfolio-about">Приложение</p>
+                      </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
                       </div>
                     </div>
                   </a>
@@ -191,6 +231,16 @@
                         </h3>
                         <p class="portfolio-about">Веб-сайт</p>
                       </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
+                      </div>
                     </div>
                   </a>
                 </article>
@@ -210,6 +260,16 @@
                         </h3>
                         <p class="portfolio-about">Дизайн</p>
                       </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
+                      </div>
                     </div>
                   </a>
                 </article>
@@ -227,6 +287,16 @@
                         <h3 class="list-title-portfolio">Проект LAB</h3>
                         <p class="portfolio-about">Маркетинг</p>
                       </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
+                      </div>
                     </div>
                   </a>
                 </article>
@@ -243,6 +313,16 @@
                       <div class="box">
                         <h3 class="list-title-portfolio">Growing Business</h3>
                         <p class="portfolio-about">Приложение</p>
+                      </div>
+                      <div class="portfolio-about-discription">
+                        <a href="" class="portfolio-about-link">
+                          <p class="portfolio-about-text">
+                            Технокряк это современная площадка распространения
+                            коронавируса. Компании используют эту платформу для
+                            цифрового шпионажа и атак на защищённые сервера
+                            конкурентов.
+                          </p>
+                        </a>
                       </div>
                     </div>
                   </a>
