--- a/portfolio.html
+++ b/portfolio.html
@@ -81,58 +81,62 @@
             <ul class="portfolio list">
               <li class="portfolio-item">
                 <article class="cards-item">
-                  <a href="" class="cards-link">
-                    <div class="cards-img">
-                      <img
-                        src="./images/portfolio/img.jpg"
-                        alt="фото веб-сайта"
-                        width="370"
-                      />
-                      <div class="box">
-                        <h3 class="list-title-portfolio">Технокряк</h3>
-                        <p class="portfolio-about">Веб-сайт</p>
+                  <div class="article">
+                    <a href="" class="cards-link">
+                      <div class="cards-img">
+                        <img
+                          src="./images/portfolio/img.jpg"
+                          alt="фото веб-сайта"
+                          width="370"
+                        />
+                        <div class="box">
+                          <h3 class="list-title-portfolio">Технокряк</h3>
+                          <p class="portfolio-about">Веб-сайт</p>
+                        </div>
+                        <div class="portfolio-about-discription">
+                          <a href="" class="portfolio-about-link">
+                            <p class="portfolio-about-text">
+                              Технокряк это современная площадка распространения
+                              коронавируса. Компании используют эту платформу
+                              для цифрового шпионажа и атак на защищённые
+                              сервера конкурентов.
+                            </p>
+                          </a>
+                        </div>
                       </div>
-                      <div class="portfolio-about-discription">
-                        <a href="" class="portfolio-about-link">
-                          <p class="portfolio-about-text">
-                            Технокряк это современная площадка распространения
-                            коронавируса. Компании используют эту платформу для
-                            цифрового шпионажа и атак на защищённые сервера
-                            конкурентов.
-                          </p>
-                        </a>
-                      </div>
-                    </div>
-                  </a>
+                    </a>
+                  </div>
                 </article>
               </li>
               <li class="portfolio-item">
                 <article class="cards-item">
-                  <a href="" class="cards-link">
-                    <div class="cards-img">
-                      <img
-                        src="./images/portfolio/img-2.jpg"
-                        alt="два баскетболиста"
-                        width="370"
-                      />
-                      <div class="box">
-                        <h3 class="list-title-portfolio">
-                          Постер New Orlean vs Golden Star
-                        </h3>
-                        <p class="portfolio-about">Дизайн</p>
+                  <div class="article">
+                    <a href="" class="cards-link">
+                      <div class="cards-img">
+                        <img
+                          src="./images/portfolio/img-2.jpg"
+                          alt="два баскетболиста"
+                          width="370"
+                        />
+                        <div class="box">
+                          <h3 class="list-title-portfolio">
+                            Постер New Orlean vs Golden Star
+                          </h3>
+                          <p class="portfolio-about">Дизайн</p>
+                        </div>
+                        <div class="portfolio-about-discription">
+                          <a href="" class="portfolio-about-link">
+                            <p class="portfolio-about-text">
+                              Технокряк это современная площадка распространения
+                              коронавируса. Компании используют эту платформу
+                              для цифрового шпионажа и атак на защищённые
+                              сервера конкурентов.
+                            </p>
+                          </a>
+                        </div>
                       </div>
-                      <div class="portfolio-about-discription">
-                        <a href="" class="portfolio-about-link">
-                          <p class="portfolio-about-text">
-                            Технокряк это современная площадка распространения
-                            коронавируса. Компании используют эту платформу для
-                            цифрового шпионажа и атак на защищённые сервера
-                            конкурентов.
-                          </p>
-                        </a>
-                      </div>
-                    </div>
-                  </a>
+                    </a>
+                  </div>
                 </article>
               </li>
               <li class="portfolio-item">
