--- a/index.html
+++ b/index.html
@@ -62,11 +62,14 @@
         </h1>
         <button data-modal-open type="button" class="button primary">
           Заказать услугу
-        </button>
+        </button class="button-close-imput">
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <p>Lorem</p>
-            <button data-modal-close>Закрыть</button>
+            <button data-modal-close class="button-close">
+              <svg class="button-close-svg">
+                <use href="./images/icons/sprite.svg#close-black"></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
