--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button data-modal-close class="button-close">
-              <svg class="button-close-svg">
-                <use href="./images/icons/sprite.svg#close-black"></use>
+              <svg class="button-close-svg" width="11" height="11">
+                <use href="./images/icons/sprite.svg#icon-Vector"></use>
               </svg>
             </button>
           </div>
