--- a/index.html
+++ b/index.html
@@ -63,15 +63,6 @@
         <button data-modal-open type="button" class="button primary">
           Заказать услугу
         </button class="button-close-imput">
-        <div class="backdrop is-hidden" data-modal>
-          <div class="modal">
-            <button data-modal-close class="button-close">
-              <svg class="button-close-svg" width="11" height="11">
-                <use href="./images/icons/sprite.svg#icon-Vector"></use>
-              </svg>
-            </button>
-          </div>
-        </div>
       </section>
       <!--necessary skills-->
       <section class="section">
@@ -570,6 +561,15 @@
         </div>
       </div>
     </footer>
-    <!-- <script src="./js/modal.js"></script> -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="button-close">
+          <svg class="button-close-svg" width="11" height="11">
+            <use href="./images/icons/sprite.svg#icon-Vector"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
