--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button data-modal-open type="button" class="button primary">
+        <button data-open-modal type="button" class="button primary">
           Заказать услугу
         </button class="button-close-imput">
       </section>
@@ -561,15 +561,34 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-backdrop>
       <div class="modal">
-        <button data-modal-close class="button-close">
+        <button type="button" class="button-close">
           <svg class="button-close-svg" width="11" height="11">
             <use href="./images/icons/sprite.svg#icon-Vector"></use>
           </svg>
         </button>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script>
+      const refs = {
+      openModalBtn: document.querySelector("[data-modal-open]"),
+      closeModalBtn: document.querySelector("[data-modal-close]"),
+      backdrop: document.querySelector("[data-backdrop]""),
+    };
+  
+    refs.openModalBtn.addEventListener("click", toggleModal);
+    refs.closeModalBtn.addEventListener("click", toggleModal);
+
+    refs.backdroplBtn.addEventListener("click", logBackdropClick);
+  
+    function toggleModal() {
+      refs.backdrop.classList.toggle("is-hidden");
+    }
+
+    function logBackdropClick() {
+      console.log("Это клик в бекдропе");
+    }
+    </script>
   </body>
 </html>
