--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button data-open-modal type="button" class="button primary">
+        <button data-modal-open type="button" class="button primary">
           Заказать услугу
         </button class="button-close-imput">
       </section>
@@ -561,34 +561,15 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-backdrop>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="button-close">
+        <button data-modal-close type="button" class="button-close">
           <svg class="button-close-svg" width="11" height="11">
             <use href="./images/icons/sprite.svg#icon-Vector"></use>
           </svg>
         </button>
       </div>
     </div>
-    <script>
-      const refs = {
-      openModalBtn: document.querySelector("[data-modal-open]"),
-      closeModalBtn: document.querySelector("[data-modal-close]"),
-      backdrop: document.querySelector("[data-backdrop]""),
-    };
-  
-    refs.openModalBtn.addEventListener("click", toggleModal);
-    refs.closeModalBtn.addEventListener("click", toggleModal);
-
-    refs.backdroplBtn.addEventListener("click", logBackdropClick);
-  
-    function toggleModal() {
-      refs.backdrop.classList.toggle("is-hidden");
-    }
-
-    function logBackdropClick() {
-      console.log("Это клик в бекдропе");
-    }
-    </script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
