--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button data-modal-open type="button" class="button primary">
+        <button
+          data-modal-open
+          type="button"
+          class="button primary button-close-imput"
+        >
           Заказать услугу
-        </button class="button-close-imput">
+        </button>
       </section>
       <!--necessary skills-->
       <section class="section">
